@@ -511,6 +511,8 @@ extern zxvision_known_window_names zxvision_known_window_names_array[];
 
 extern char **zxvision_find_icon_for_known_window(char *nombre);
 
+extern int zxvision_known_window_is_valid_by_index(int indice);
+
 extern int zxvision_find_known_window(char *nombre);
 
 extern int total_restore_window_array_elements;
@@ -554,7 +556,9 @@ extern int zxvision_widget_find_name_type(char *name);
 #define ZXVISION_WIDGET_TYPE_SPEAKER_RADIUS 16
 #define ZXVISION_WIDGET_TYPE_CIRCLE_RADIUS 16
 #define ZXVISION_WIDGET_TYPE_CURVE_LENGTH 32
-#define ZXVISION_WIDGET_TYPE_PARTICLES_RADIUS 32
+#define ZXVISION_WIDGET_TYPE_PARTICLES_RADIUS 29
+//cuando se usaba la anterior funcion 3D que usa coseno y seno
+//#define ZXVISION_WIDGET_TYPE_PARTICLES_RADIUS 32
 
 extern void zxvision_widgets_draw_speedometer_common(zxvision_window *ventana,int xorigen_linea,int yorigen_linea,int percentaje,int color_linea,int color_contorno);
 extern void zxvision_widgets_draw_metter_common_by_shortname(zxvision_window *ventana,int columna_texto,int fila_texto,char *short_name,int tipo,int valor_en_vez_de_perc,int tinta_texto_descripcion,int papel_texto_descripcion,int escribir_espacios);
