@@ -34,11 +34,13 @@ Improved ZX Vision:
 - Process switcher: now it can be set to be always visible
 - Process switcher: icon names are more descriptive
 - Menu titles are translated to selected language (not everything yet, please be patient)
+- Improve perspective for widget 3D Particles on View Sensors
 
 Improved ZX Desktop:
 - Allow to set parameters when redefining upper buttons, for some actions like openwindow or set machine
 - Allow to reconfigure upper buttons by right clicking over them
 - When defining upper buttons or f-functions to SetMachine, machine name parameter is set to current machine
+- When creating new icon of type OpenWindow, a window list is displayed to select
 
 * Fixes:
 
